# battleship-game-cpp

./: .gitignore  CMakeLists.txt  CMakeProject1.cpp  CMakeSettings.json  LICENSE  Readme.md
cmake/: FindSDL2_ttf.cmake
src/: game-field.cpp  game-field.h  game.cpp  game.h
src/sdl2/: app.cpp  app.h  draw-context.cpp  draw-context.h  game-field-view.cpp  game-field-view.h  grid-of-chars.cpp  grid-of-chars.h  main.cpp
src/sdl2/screens/: field-maker-screen.cpp  field-maker-screen.h  screen.h
